Fix timer login issue on mobile screen by adding negative z-index on illustration

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -79,7 +79,7 @@ span.navbar-text {
   height: 50%;
   width: 50%;
   position: absolute;
-  margin-top: -2rem;
+  z-index: -1;
 }
 
 /* Blog page */
